# DynaD

./: .gitignore  README.md  pom.xml
dyna_be/: .env  .gitignore  Cargo.toml  Dockerfile  Dockerfile.distroless
dyna_be/src/: configs.rs  handlers.rs  main.rs  routes.rs  schemas.rs
dyna_be/src/configs/: app_configs.rs
dyna_be/src/handlers/: file_handlers.rs
dyna_be/src/routes/: file_routes.rs
dyna_be/src/schemas/: file_schemas.rs
dyna_fe/: .gitignore  config.ts  package-lock.json  package.json  tsconfig.json
dyna_fe/app/: foldercrumbs.tsx  layout.tsx  listview.tsx  navbar.tsx  page.tsx
dyna_fe/services/: files_service.ts
dyna_fe/styles/themes/: darkThemeOptions.ts
dyna_fe/utils/: file_utils.ts  http_layer.ts
src/main/java/com/dserver/dyna/: DynaApplication.java
src/main/java/com/dserver/dyna/controllers/: TestController.java
src/main/java/com/dserver/dyna/listeners/: LoggingLIstener.java
src/main/resources/: application.yaml  banner.txt  log4j2-spring.yaml
src/main/resources/templates/: index.html
src/test/java/com/dserver/dyna/: DynaApplicationTests.java
