[package]
name = "dyna_be"
version = "0.1.0"
edition = "2021"
authors = ["Faizan Azim <faizanazim11@gmail.com"]
license = "MIT"
description = "A Easy to use, Fast deployable containerized File Manager."

[dependencies]
tokio ={ version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
axum = { version = "0.6.20", features = ["headers"] }
tower-http = { version = "0.4", features = ["fs", "cors", "trace"] }
async-trait = "0.1"
strum_macros = "0.25.2"
dotenv = "0.15.0"
once_cell = "1.18.0"
chrono = "0.4.26"
chrono-tz = "0.8.3"
tokio-util = "0.7.8"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
